--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
 
     <title>Login</title>
-
+    <link href="{% static 'img/favicon.png' %}" rel="icon">
     <link rel="stylesheet" href="{% static 'account/css/style.css' %}">
     <style>
         .inputBox {
