--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -1,101 +1,25 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>{{ request.user.username }}'s profile</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
 
-    <!-- Favicons -->
-    {#  <link href="assets/img/favicon.png" rel="icon">#}
-    <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+{% block title %}
+{{ user_name }}'s Profile
+{% endblock %}
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-          rel="stylesheet">
+{% block home_url %}
 
-    <!-- Vendor CSS Files -->
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
-    <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
+{% url 'home:index' %}
 
-    <!-- Main CSS File -->
-    <link href="{% static 'css/main.css' %}" rel="stylesheet">
+{% endblock %}
 
-    <!-- =======================================================
-    * Template Name: UpConstruction
-    * Template URL: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/
-    * Updated: Aug 07 2024 with Bootstrap v5.3.3
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
-</head>
+{% block blog_url %}
 
-<body class="starter-page-page">
+{% url 'blog:blogs' %}
 
-<header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
+{% endblock %}
 
-        <a href="index.html" class="logo d-flex align-items-center">
-            <!-- Uncomment the line below if you also wish to use an image logo -->
-            <!-- <img src="assets/img/logo.png" alt=""> -->
-            <h1 class="sitename">UpConstruction</h1> <span>.</span>
-        </a>
 
-        <nav id="navmenu" class="navmenu">
-            <ul>
-                <li><a href="#" class="active">Home</a></li>
-                {% if request.user.is_anonymous %}
-                    <li><a href="{% url 'account:login' %}">Login</a></li>
-                    <li><a href="{% url 'account:register' %}">Register</a></li>
-                {% endif %}
-                <li><a href="blog.html">Blog</a></li>
-                {% if request.user.is_authenticated %}
-                    <li class="dropdown">
-                        <a href="#"><span class="p-1">{{ request.user.username }}</span>
-                            {% if request.user.profile_image %}
-                                <img style="border-radius: 50%" width="26" height="26"
-                                     src="{{ request.user.profile_image.url }}" alt="">
-                            {% else %}
-                                <img width="26" height="26" src="{% static 'img/none_person.png' %}" alt="">
-                            {% endif %}
-                            <i class="bi bi-chevron-down toggle-dropdown"></i>
-                        </a>
-                        <ul>
-                            <li><a href="{% url 'account:logout' %}">Logout</a></li>
-                            <li><a href="{% url 'account:profile' %}">Edit Profile</a></li>
-                            {#                        <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i#}
-                            {#                                class="bi bi-chevron-down toggle-dropdown"></i></a>#}
-                            {#                            <ul>#}
-                            {#                                <li><a href="#">Deep Dropdown 1</a></li>#}
-                            {#                                <li><a href="#">Deep Dropdown 2</a></li>#}
-                            {#                                <li><a href="#">Deep Dropdown 3</a></li>#}
-                            {#                                <li><a href="#">Deep Dropdown 4</a></li>#}
-                            {#                                <li><a href="#">Deep Dropdown 5</a></li>#}
-                            {#                            </ul>#}
-                            {#                        </li>#}
-                            {#                        <li><a href="#">Dropdown 2</a></li>#}
-                            {#                        <li><a href="#">Dropdown 3</a></li>#}
-                            {#                        <li><a href="#">Dropdown 4</a></li>#}
-                        </ul>
-                    </li>
-                {% endif %}
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-            <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-        </nav>
-
-    </div>
-</header>
-
+{% block content %}
 <main class="main">
 
     <!-- Page Title -->
@@ -164,99 +88,4 @@
     </section><!-- /Starter Section Section -->
 
 </main>
-
-<footer id="footer" class="footer dark-background">
-
-    <div class="container footer-top">
-        <div class="row gy-4">
-            <div class="col-lg-4 col-md-6 footer-about">
-                <a href="index.html" class="logo d-flex align-items-center">
-                    <span class="sitename">UpConstruction</span>
-                </a>
-                <div class="footer-contact pt-3">
-                    <p>A108 Adam Street</p>
-                    <p>New York, NY 535022</p>
-                    <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-                    <p><strong>Email:</strong> <span>info@example.com</span></p>
-                </div>
-                <div class="social-links d-flex mt-4">
-                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                    <a href=""><i class="bi bi-facebook"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-            </div>
-
-            <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Useful Links</h4>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Terms of service</a></li>
-                    <li><a href="#">Privacy policy</a></li>
-                </ul>
-            </div>
-
-            <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Our Services</h4>
-                <ul>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Web Development</a></li>
-                    <li><a href="#">Product Management</a></li>
-                    <li><a href="#">Marketing</a></li>
-                    <li><a href="#">Graphic Design</a></li>
-                </ul>
-            </div>
-
-            <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Hic solutasetp</h4>
-                <ul>
-                    <li><a href="#">Molestiae accusamus iure</a></li>
-                    <li><a href="#">Excepturi dignissimos</a></li>
-                    <li><a href="#">Suscipit distinctio</a></li>
-                    <li><a href="#">Dilecta</a></li>
-                    <li><a href="#">Sit quas consectetur</a></li>
-                </ul>
-            </div>
-
-            <div class="col-lg-2 col-md-3 footer-links">
-                <h4>Nobis illum</h4>
-                <ul>
-                    <li><a href="#">Ipsam</a></li>
-                    <li><a href="#">Laudantium dolorum</a></li>
-                    <li><a href="#">Dinera</a></li>
-                    <li><a href="#">Trodelas</a></li>
-                    <li><a href="#">Flexo</a></li>
-                </ul>
-            </div>
-
-        </div>
-    </div>
-
-
-</footer>
-
-<!-- Scroll Top -->
-<a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-        class="bi bi-arrow-up-short"></i></a>
-
-<!-- Preloader -->
-<div id="preloader"></div>
-
-<!-- Vendor JS Files -->
-<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
-<script src="{% static 'vendor/aos/aos.js' %}"></script>
-<script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
-<script src="{% static 'vendor/imagesloaded/imagesloaded.pkgd.min.js' %}"></script>
-<script src="{% static 'vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-<script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
-<script src="{% static 'vendor/purecounter/purecounter_vanilla.js' %}"></script>
-
-<!-- Main JS File -->
-<script src="{% static 'js/main.js' %}"></script>
-
-</body>
-
-</html>
+{% endblock %}
